[package]
name = "tun"
version = "0.5.1"
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.153"
nix = { version = "0.28.0", features = ["ioctl"] }
tokio = "1.37.0"
